<resources>
    <string name="app_name">Simple Calculator</string>

    <string name="btn_percent">%</string>
    <string name="btn_equal">=</string>
    <string name="btn_clear">c</string>
    <string name="btn_division">/</string>
    <string name="btn_multiplication">*</string>
    <string name="btn_back">back</string>
    <string name="btn_minus">-</string>
    <string name="btn_plus">+</string>
    <string name="btn_dot">.</string>
    <string name="bracket_open">(</string>
    <string name="bracket_close">)</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>

</resources>